Bug 78271 - FORMATTING: Setting non-default name prevents creating new Section
Summary: FORMATTING: Setting non-default name prevents creating new Section
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: BSA target:4.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-05-05 04:46 UTC by Jim Avera
Modified: 2014-05-12 19:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Avera 2014-05-05 04:46:07 UTC
Problem description: When creating a Section, if the default name ("Section 1" etc.) is replaced with a user-defined name, then the Insert button becomes inactive and it is impossible to create the section.  This is a regression -- the problem is not in 4.1.3.2 (but don't know exactly when the bug appeared)

Steps to reproduce:
1. Open new writer doc, type some text and select some lines
2. Insert->Section
3. Replace the default New section box content "Section 1" with something else

Current behavior: The Insert button becomes inactive

Expected behavior: It should be possible to insert a section with a non-default name.

              
Operating System: Ubuntu
Version: 4.3.0.0.alpha0+ Master
Last worked in: 4.1.3.2 release
Comment 1 Jim Avera 2014-05-05 06:39:22 UTC
Problem still exists in 4.3.0.0.alpha1
Comment 2 Cor Nouws 2014-05-05 07:38:04 UTC
Hi Jim,

Thanks for reporting!
I confirm the bug.
I do not see the problem in 4.2.3.3 and 4.2.4.1 on Ubuntu.
Comment 3 Michael Stahl (allotropia) 2014-05-12 19:47:57 UTC
regression from:

commit 68ec95b3f80408ae50897b043eed69a07d084df9
Author:     Eike Rathke <erack@redhat.com>
AuthorDate: Sat Mar 1 03:13:28 2014 +0100

    made ListBox handle more than 64k elements, fdo#61520 related

fixed on master
Comment 4 Commit Notification 2014-05-12 19:48:28 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=121e0d2e9d1b76fe89c5925b1b4a29b22895237e

fdo#78271: sw: Insert Section dialog: fix editing of name



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.