fdo#78271: sw: Insert Section dialog: fix editing of name

... to not disable the "OK" button due to 32-bit combo-box no longer
using 2^16-1 for "not found".

(regression from 68ec95b3f80408ae50897b043eed69a07d084df9)

Change-Id: I691e5e81de4a112108741513251945f1b8dd88d4